sfdx-spa-alcala/force-app/main/default/objects/Class_Connection__c/Class_Connection__c.object-meta.xml
<CustomObject>
    <description>this a junction object used to enroll a student into a classroom.</description>
    <label>Class Connection</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Class Connection ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>