sfdx-spa-alcala/force-app/main/default/objects/Class_Connection__c/fields/Class_Offering_ID__c.field-meta.xml
<CustomField>
    <fullName>Class_Offering_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class Offering ID</label>
    <referenceTo>Class_Offering__c</referenceTo>
    <relationshipLabel>Class Connections</relationshipLabel>
    <relationshipName>Class_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>