sfdx-spa-alcala/force-app/main/default/objects/Class_Connection__c/fields/Class_Offering_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Offering_Name__c</fullName>
    <formula>Class_Offering_ID__r.Class_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Offering Name</label>
    <type>Text</type>
</CustomField>