sfdx-spa-alcala/force-app/main/default/objects/Class_Connection__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Class Connections</relationshipLabel>
    <relationshipName>Class_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>