sfdx-spa-alcala/force-app/main/default/objects/Class_Connection__c/fields/Credit_Hours__c.field-meta.xml
<CustomField>
    <fullName>Credit_Hours__c</fullName>
    <formula>Class_Offering_ID__r.ClassID__r.Credit_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Hours</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>