sfdx-spa-alcala/force-app/main/default/objects/Class_Connection__c/fields/Credits_Earned__c.field-meta.xml
<CustomField>
    <fullName>Credits_Earned__c</fullName>
    <label>Credits Earned</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>