sfdx-spa-alcala/force-app/main/default/objects/Class_Connection__c/fields/Related_Enrollment_Record__c.field-meta.xml
<CustomField>
    <fullName>Related_Enrollment_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Enrollment Record</label>
    <referenceTo>Enrollment_not_used__c</referenceTo>
    <relationshipLabel>Class Connections</relationshipLabel>
    <relationshipName>Class_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>