sfdx-spa-alcala/force-app/main/default/objects/Class_Connection__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Class In Progress</fullName>
            </value>
            <value>
                <fullName>Class Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>