sfdx-spa-alcala/force-app/main/default/objects/Class_Connection__c/recordTypes/Faculty.recordType-meta.xml
<RecordType>
    <fullName>Faculty</fullName>
    <active>true</active>
    <description>A Faculty Course Connection.</description>
    <label>Faculty</label>
</RecordType>