sfdx-spa-alcala/force-app/main/default/objects/Class_Connection__c/recordTypes/Student.recordType-meta.xml
<RecordType>
    <fullName>Student</fullName>
    <active>true</active>
    <description>A Student Course Connection.</description>
    <label>Student</label>
</RecordType>