sfdx-spa-alcala/force-app/main/default/objects/Class_Connection__c/listViews/All_Class_Connections.listView-meta.xml
<ListView>
    <fullName>All_Class_Connections</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Class_Offering_Name__c</columns>
    <columns>Credit_Hours__c</columns>
    <columns>Credits_Earned__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Class Connections</label>
</ListView>